Revert "fix: feedback buttons colour scheme on mobiles (#1117)"
This reverts commit 379d181ac01ccc7bd93d81be759e6f029db503f2.

--- a/src/components/Feedback/index.module.css
+++ b/src/components/Feedback/index.module.css
@@ -10,14 +10,6 @@
   background-color: var(--background-content-light);
 }
 
-.text {
-  color: #04060B;
-}
-
-[data-theme=dark] .text {
-  color: #F3F3F6;
-}
-
 [data-theme=dark] .container {
   background-color: var(--background-content-dark);
 }
